css/main.css
:root {
  /* Global Colors */
    --main-color:#BF95F2;
    --main-white: #F8F8F3;    
    --black: #505050;
    --og: rgb(255, 151, 54);
    --light-black: rgb(92, 92, 92);
    --bg: #282A35;
    --green: #2FE98C;
    --secondary-bg: #464751;
  /* Global Styles */
    --box-shadow: rgba(0, 0, 0, 0) 1px 0px 8px;
    --inner-left-align: .9em;
}

* {
    padding: 0;
    box-sizing: border-box;
    text-decoration: inherit;
}

html, body {
    height: 100%;
}

body {
    flex-direction: column;

    margin: 0 auto;
    
    font-size: 1.0em;  
    font-family: "Roboto Mono", "Arial", sans-serif;

    line-height: 1.5;
    
    max-width: 40em;

    color: var(--main-white);
    background-color: var(--bg);
}

article {
  min-height: 100%;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  
}

header {
  display:flex;
  flex-direction: column;

  padding-top: 1em;
}

main {  
  display: flex; 
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;

  height: 90%;
}

footer {    
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  font-size: 12px;
  flex-wrap: nowrap;
  
  width: 100%;
  height: 2em;
  position: fixed;
  left: 25%;
  margin-left: -25%;
  bottom:0;
  
  position: fixed;
    
  color: var(--main-white);
}

.footer-date {
  height: 100%;
  display:flex;
  flex-direction: column;
  justify-content: center;
  
  padding-left: .5em;
  padding-right: .1em;
  color: var(--bg);
  background-color: var(--og);
}

.arrow-right-date {
  
  width: 0; 
  height: 0; 
  border-top: 1em solid transparent;
  border-bottom: 1em solid transparent;  
  padding-right: 0.5em;

  border-left: 1em solid var(--og);
  background-color: #464751;
}

.footer-branch {
  height: 100%;
  display:flex;
  flex-direction: row;
  align-items: center;
  
  padding-right: .5em;
  padding-top: .1em;
  background-color: var(--secondary-bg);
}

.footer-name {    
  height: 100%;

  display:flex;
  flex-direction: row;
  align-items: center;
  padding-left: .5em;  
  padding-right: 1em;

  background-color: var(--secondary-bg);
}

.arrow-right-file {
  width: 0; 
  height: 0; 
  border-top: 1em solid transparent;
  border-bottom: 1em solid transparent;
  padding-left: 1em;
  
  border-left: 1em solid var(--secondary-bg);
  background-color: #B75DC8; /* var(--main-color);*/
}

.footer-mode {
  flex-grow: 1;
  height: 100%;
  display:flex;
  flex-direction: column;
  justify-content: center;
  
  color: var(--main-white);
  background-color: #B75DC8;
}

.arrow-left-mode {
  width: 0; 
  height: 0; 
 
  border-top: 1em solid transparent;
  border-bottom: 1em solid transparent;
  padding-right: 0.5em;
  border-right: 1em solid var(--secondary-bg); 
  background-color: #B75DC8;
}

.footer-percent {
  height: 100%;
  padding-right: 1em;
  padding-left: .5em;
  display:flex;
  flex-direction: column;
  justify-content: center;

  background-color: var(--secondary-bg);
  
}

header, main, footer {
  flex-shrink: 0;
}

b {
  font-weight: 500;
  
  color: #FF79C2;
}


/* List Styling */
ol {   
    list-style-type: decimal;
}

ol li {
    list-style-type: decimal;
}


/*------------*/


/* Header Styling */
h1 {
    font-size: 2em;
}

h2 {
    margin: 1.75em 0 0.5em;
    border-bottom: 2px solid #dce3ea;
}

h1, h2 {
    font-weight: 100;
}

h3 {
    font-size: 1.2em;
    font-weight: 400;
    color: #FF79C2;
}

h4 {
  font-size: 1.1em;
  font-weight: 400;
}
/*------------*/


header a {
  padding: 0 0.5em 0 0.5em;    
  
}

/* Nav Styling */
.navbar {
  width: 100%;  
  padding-left: 2.6em;  
  padding-right: 1.4em; 
}

.navbar a {
  /*color: white !important;*/
}

.navbar-nav {
    
}
.navbar-nav .navbar ul li {
  list-style-type: none;
}

.nav-link {
  padding-bottom: 0px;
}

.nav-link:hover {}


.navbar-brand {
  font-size: 1.3em;
  margin-left: -.50em;
  color: white;
  padding-left: 0 !important;
}

.navbar-brand:hover {}

.nav-item {}
/*------------*/


/* Section Styling */
section {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  
  height: 100%;
  width: 100%;

}

.section-header {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  padding-left: 2em;
  padding-bottom: .7em;
}

.section-h2 {
  margin: .5em 0 0;
  border: none;
}

.section-h2  > p::first-letter {
  color: var(--main-color);
  text-decoration: underline;
}

section a {
  color: var(--green);
}
section a:hover {
  color: var(--main-white);
}

section i {
    color: var(--green);
}

.top-link {
    font-size:.9em;
    width: 100%;
    text-align:right;
    padding-right: 2em;
}

.section-content {
  display: flex;
  flex-direction: column;  
  flex-wrap: wrap;
  padding: 1em 2em 0em 2em;
}

.slide {
    display: none;
}

.demo {
    cursor:pointer
}

.underline {
    background-image: linear-gradient(var(--main-color) 0%, var(--main-color) 100%);
    background-repeat: repeat-x;
    background-position: 0em 1.1em;
    background-size: 1em 3em;
    -webkit-background-size: 1em 3em;
    -moz-background-size: 1em 3em;
    -o-background-size: 1em 3em;
}

blockquote {
    background-color:#F8F8F8;
    padding: .5em;
    border: 2px solid var(--main-color);
}
/*-------------*/

#intro {
  height: 100%;
  color: #F8F8F3;
}


#about {
  margin-top: .5em;
}

#project {
  /* background-color: #444758; */
  margin-bottom: 3em;
}

/* About Styling */
.tab-content {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;
  grid-template-areas: "tab-name tab-info tab-info tab-info" "tab-name tab-info tab-info tab-info" "tab-name tab-info tab-info tab-info";  
}

.tab-title {
  grid-area: tab-name;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
}

.tab-info { 
  grid-area: tab-info;  
  padding-left: 4.5em;
}
/*-------------*/


/* Project Styling */
.project-row {
  padding-left: var(--inner-left-align);
}

.project-item {
  margin-top: .5em;
}

.project-type {
  color: var(--light-black);
}
/*------------*/

/* Links */
a {
  color: var(--main-white);
  border-bottom: 2px solid transparent;
}

a:hover {
    border-bottom: 2px dashed var(--black);
    text-decoration: none;
    color: var(--main-white);
}
a:link,
a:visited {
}
/*------------*/


/* Device Specific Styling */
@media all {
    html {
        font-size: 1em;
    }
}

@media (min-width: @screen-sm-min) {
    .section{
        margin:0;
        font-size: 1em;
        padding-left:5px;
        width: 100%;
    }
    .tab-info { 
      grid-area: tab-info;  
      padding-left: 2em;
    }
}

@media screen and (max-width: 35em) {
    .section {
        margin:0;
        font-size: 1em;
        padding-left:5px;
        width: 100%;
    }
    .tab-info { 
      grid-area: tab-info;  
      padding-left: 1.5em;
    }
}
/*------------*/

strong {
  color: var(--black);
}

.svg-container { 
  height: 50px;
  padding-top: 0;
} 

